--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <name>Apache Sling MongoDB Resource Provider</name>
 
     <scm>
-        <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-mongodb.git</conncetion>
+        <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-mongodb.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-mongodb.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-mongodb.git</url>
     </scm>
