mark module as deprecated see https://lists.apache.org/thread/l4wd9xbk7f88jc6gs1mr2vz1jc7d8yo1

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,4 +1,10 @@
 github:
+  description: "Apache Sling MongoDB Resource Provider (deprecated)"
+  homepage: "https://sling.apache.org/"
+  labels:
+  - "sling"
+  - "java"
+  - "deprecated"
   autolink_jira:
   - "SLING"
   - "OAK"
